--- a/template/package.json
+++ b/template/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "robonomics-js": "^0.2.9",
-    "vue": "^2.5.2",
+    "bluebird": "^3.5.3",
+    "robonomics-js": "^0.3.0",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vue-web3-check": "^1.0.0",
-    "vuesax": "^3.1.30",
-    "vuetify": "^1.0.19"
+    "vue-web3-check": "^1.1.0",
+    "vuetify": "^1.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
