--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "bluebird": "^3.5.5",
     "core-js": "^3.3.2",
-    "robonomics-js": "^0.5.2",
+    "robonomics-js": "^0.6.0",
     "vue": "^2.6.10",
-    "vue-web3-check": "^1.4.2"
+    "vue-web3-check": "^1.5.1",
+    "web3": "^1.2.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.5",
-    "@vue/cli-plugin-eslint": "^4.0.5",
-    "@vue/cli-service": "^4.0.5",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
